Square array numbers and sort them fix and UT